--- a/public/navigation.html
+++ b/public/navigation.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <div id="navigation-root"></div>
-  <script src="/navigation.bundle.js"></script>
+  <script src="./navigation.bundle.js"></script>
 </body>
 </html>
