--- a/public/navigation.html
+++ b/public/navigation.html
@@ -16,5 +16,7 @@
 <body>
   <div id="navigation-root"></div>
   <script src="./navigation.bundle.js"></script>
+  <script src="./js/jquery.1.11.1.js"></script>
+  <script src="./js/bootstrap.js"></script>
 </body>
 </html>
